# solana-agent

./: .buildinfo  .coveragerc  .gitignore  CNAME  LICENSE  Makefile  README.md  ROADMAP.md  compare.md  conf.py  config.json  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  realtime_flow.md  search.html  searchindex.js  test_errors.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml  test_report.yml
_modules/: index.html
_modules/solana_agent/client/: solana_agent.html
_modules/solana_agent/interfaces/plugins/: plugins.html
_modules/solana_agent/plugins/: manager.html  registry.html
_modules/solana_agent/plugins/tools/: auto_tool.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt
api/: index.html
docs/: conf.py  index.rst
solana_agent/: __init__.py  ai.py  cli.py
solana_agent/adapters/: __init__.py  ffmpeg_transcoder.py  llm_adapter.py  memory_adapter.py  mongodb_adapter.py  mongodb_graph_adapter.py  notification_adapter.py  openai_adapter.py  openai_realtime_ws.py  pinecone_adapter.py  vector_adapter.py
solana_agent/client/: solana_agent.py
solana_agent/docs/: index.rst
solana_agent/docs/api/: index.rst
solana_agent/domain/: __init__.py  agents.py  enums.py  feedback.py  handoff.py  models.py  notifications.py  plugins.py  projects.py  resources.py  scheduling.py  task_planning.py  tickets.py
solana_agent/domains/: __init__.py  agent.py  agents.py  enums.py  feedback.py  handoff.py  memory.py  models.py  plugins.py  projects.py  resources.py  routing.py  scheduling.py  tasks.py  tickets.py
solana_agent/factories/: agent_factory.py
solana_agent/guardrails/: pii.py
solana_agent/interfaces/: __init__.py  plugins.py  providers.py  repositories.py  services.py
solana_agent/interfaces/client/: client.py
solana_agent/interfaces/guardrails/: guardrails.py
solana_agent/interfaces/plugins/: plugins.py
solana_agent/interfaces/providers/: audio.py  data_storage.py  graph_storage.py  llm.py  memory.py  realtime.py  vector_storage.py
solana_agent/interfaces/repositories/: agent.py  memory.py
solana_agent/interfaces/services/: agent.py  graph_memory.py  knowledge_base.py  memory.py  query.py  routing.py
solana_agent/plugins/: __init__.py  manager.py  registry.py
solana_agent/plugins/tools/: __init__.py  auto_tool.py
solana_agent/repositories/: __init__.py  agent.py  dual_memory.py  feedback.py  handoff.py  memory.py  mongo_feedback.py  mongo_memory.py  mongo_resource.py  mongo_scheduling.py  project.py  resource.py  scheduling.py  ticket.py  zep_memory.py
solana_agent/services/: __init__.py  agent.py  agent_service.py  command.py  command_service.py  critic.py  graph_memory.py  handoff.py  handoff_service.py  knowledge_base.py  memory.py  memory_service.py  notification.py  notification_service.py  nps.py  project_approval.py  project_simulation.py  project_simulation_service.py  query.py  realtime.py  resource.py  routing.py  routing_service.py  scheduling.py  task_planning.py  task_planning_service.py  ticket.py
tests/: test_ai.py
tests/fixtures/domain/: agent_fixtures.py
tests/unit/adapters/: test_ffmpeg_transcoder.py  test_llm_provider.py  test_memory_adapter.py  test_mongodb_adapter.py  test_notification_adapter.py  test_openai_realtime_ws.py  test_vector_adapter.py
tests/unit/client/: test_solana_agent.py
tests/unit/domain/: test_agents.py  test_feedback.py  test_handoff.py  test_memory.py
tests/unit/domains/: test_agent_domain.py
tests/unit/factories/: test_agent_factory.py
tests/unit/interfaces/: realtime.py  test_realtime_interfaces.py
tests/unit/plugins/: test_manager.py  test_registry.py
tests/unit/repositories/: test_agent_repo.py  test_captures_repo.py  test_dual_memory_repo.py  test_feedback_repo.py  test_handoff_repo.py  test_memory_repo.py  test_mongo_memory_repo.py  test_project_repo.py  test_resource_repo.py  test_scheduling_repo.py  test_ticket_repo.py  test_zep_memory_repo.py
tests/unit/services/: test_agent.py  test_command.py  test_critic.py  test_handoff.py  test_knowledge_base.py  test_memory.py  test_notification.py  test_nps.py  test_project_approval.py  test_project_simulation.py  test_query.py  test_query_encode_in_helper.py  test_query_expo_preset.py  test_query_mp3_output.py  test_query_realtime_audio_only_no_vad_retry.py  test_query_realtime_concurrency.py  test_query_realtime_memory_persistence.py  test_query_realtime_pcm_passthrough.py  test_query_realtime_text_only.py  test_query_realtime_text_only_pcm_passthrough.py  test_query_realtime_text_only_twice.py  test_query_realtime_transcription.py  test_query_realtime_vad_reuse.py  test_realtime_service.py  test_resource.py  test_routing.py  test_routing_calls.py  test_scheduling.py  test_task_planning.py  test_ticket.py
(+1 files in other folders)
