[tool.poetry]
name = "solana-agent"
version = "29.3.0"
description = "AI Agents for Solana"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://solana-agent.com"
repository = "https://github.com/truemagic-coder/solana-agent"
documentation = "https://docs.solana-agent.com"
keywords = ["solana", "solana ai", "solana agent", "ai", "ai agent", "ai agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "solana_agent" }]

[tool.pytest.ini-options]
python_paths = [".", "tests"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "1.82.1"
pydantic = ">=2"
pymongo = "4.13.0"
zep-cloud = "2.12.3"
instructor = "1.8.3"
pinecone = "7.0.2"
llama-index-core = "0.12.39"
llama-index-embeddings-openai = "0.3.1"
pypdf = "5.5.0"
scrubadub = "2.0.1"
logfire = "3.16.1"
typer = "0.16.0"
rich = ">=13,<14.0"
pillow = "11.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.0"
pytest-github-actions-annotate-failures = "^0.3.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
mongomock = "^4.3.0"
ruff = "^0.11.9"

[tool.poetry.scripts]
solana-agent = "solana_agent.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
