[tool.poetry]
name = "solana-agent"
version = "31.1.0"
description = "AI Agents for Solana"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://solana-agent.com"
repository = "https://github.com/truemagic-coder/solana-agent"
documentation = "https://docs.solana-agent.com"
keywords = ["solana", "solana ai", "solana agent", "ai", "ai agent", "ai agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "solana_agent" }]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "1.101.0"
pydantic = ">=2"
pymongo = "4.14.1"
zep-cloud = "3.4.1"
instructor = "1.10.0"
pinecone = { version = "7.3.0", extras = ["asyncio"] }
llama-index-core = "0.13.3"
llama-index-embeddings-openai = "0.5.0"
pypdf = "6.0.0"
scrubadub = "2.0.1"
logfire = "4.3.5"
typer = "0.16.1"
rich = ">=13,<14.0"
pillow = "11.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.0"
pytest-github-actions-annotate-failures = "^0.3.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
mongomock = "^4.3.0"
ruff = "^0.12.10"

[tool.poetry.scripts]
solana-agent = "solana_agent.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
